	complete broken rwlock implementation.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedrdlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedwrlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_unlock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_wrlock.S: Likewise.

2003-02-23  Roland McGrath  <roland@redhat.com>

	* Makefile (nptl-version): Change regexp so case sensitivity is ok.

2003-02-23  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-context1.
	* tst-context1.c: New file.

	* Makefile (tests): Add tst-tls1 and tst-tls2.
	* tst-tls1.c: New file.
	* tst-tls2.c: New file.

	* libc-cancellation.c (__libc_enable_asynccancel): Correct test
	for failed cmpxchg.

	* pthread_create.c (start_thread): Set EXITING_BIT early.

	* sysdeps/i386/tls.h (THREAD_GETMEM): Mark asm as volatile.
	(THREAD_GETMEM_NC): Likewise.

2003-02-22  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_barrier_wait.S: Shave
	off 3 more bytes by using offset-less instructions when possible.

	* Makefile: Add dependency for $(objpfx)version.d.

	* eintr.c (eintr_source): Add unnecessary return but the compiler
	insists.

	* tst-kill3.c: Include <unistd.h>.

2003-02-21  Roland McGrath  <roland@redhat.com>

	* pthread_create.c (start_thread): Call __libc_thread_freeres.

2003-02-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-eintr1.
	(distribute): Add eintr.c.
	* tst-eintr1.c: New file.
	* eintr.c: New file.

	* pthread_cancel.c (pthread_cancel): Use tkill directly.

	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill):
	Disallow sending SIGCANCEL.

	* Makefile (tests): Remove tst-basic7.  Add tst-kill1, tst-kill2,
	tst-kill3, tst-kill4, tst-kill5, tst-kill6.
	* tst-kill1.c: New file.
	* tst-kill2.c: New file.
	* tst-kill3.c: New file.
	* tst-kill5.c: New file.
	* tst-kill6.c: New file.
	* tst-basic7.c: Renamed to...
	* tst-kill4.c: ...this.
