@@ -45,7 +45,6 @@ __pthread_rwlock_wrlock:
 	pushl	%ebx
 
 	xorl	%esi, %esi
-	xorl	%edx, %edx
 	movl	12(%esp), %ebx
 
 	/* Get the lock.  */
@@ -67,6 +66,8 @@ __pthread_rwlock_wrlock:
 
 3:	incl	WRITERS_QUEUED(%ebx)
 	je	4f
+
+	movl	WRITERS_WAKEUP(%ebx), %edx
 
 	LOCK
 #if MUTEX == 0
@@ -95,7 +96,6 @@ __pthread_rwlock_wrlock:
 	jne	12f
 
 13:	decl	WRITERS_QUEUED(%ebx)
-	movl	$0, WRITERS_WAKEUP(%ebx)
 	jmp	2b
 
 5:	xorl	%ecx, %ecx
@@ -115,7 +115,12 @@ __pthread_rwlock_wrlock:
 	popl	%esi
 	ret
 
-1:	movl	%ebx, %ecx
+1:
+#if MUTEX == 0
+	movl	%ebx, %ecx
+#else
+	leal	MUTEX(%ebx), %ecx
+#endif
 	call	__lll_mutex_lock_wait
 	jmp	2b
 
@@ -124,7 +129,12 @@ __pthread_rwlock_wrlock:
 	movl	$EDEADLK, %ecx
 	jmp	9b
 
-6:	movl	%ebx, %eax
+6:
+#if MUTEX == 0
+	movl	%ebx, %eax
+#else
+	leal	MUTEX(%ebx), %eax
+#endif
 	call	__lll_mutex_unlock_wake
 	jmp	7b
 
@@ -132,11 +142,21 @@ __pthread_rwlock_wrlock:
 	movl	$EAGAIN, %ecx
 	jmp	9b
 
-10:	movl	%ebx, %eax
+10:
+#if MUTEX == 0
+	movl	%ebx, %eax
+#else
+	leal	MUTEX(%ebx), %eax
+#endif
 	call	__lll_mutex_unlock_wake
 	jmp	11b
 
-12:	movl	%ebx, %ecx
+12:
+#if MUTEX == 0
+	movl	%ebx, %ecx
+#else
+	leal	MUTEX(%ebx), %ecx
+#endif
 	call	__lll_mutex_lock_wait
 	jmp	13b
 	.size	__pthread_rwlock_wrlock,.-__pthread_rwlock_wrlock
